// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dbRegister should put a single element for a Character file 1`] = `
Object {
  "AssetId": "CHARACTER#12345",
  "DataCategory": "Meta::Character",
  "FirstImpression": "Frumpy Goth",
  "Name": "Tess",
  "OneCoolThing": "Fuchsia eyes",
  "Outfit": "A bulky frock-coat lovingly kit-bashed from a black hoodie and patchily dyed lace.",
  "Pronouns": Object {
    "adjective": "hers",
    "object": "her",
    "possessive": "her",
    "reflexive": "herself",
    "subject": "she",
  },
  "fileName": "test.wml",
  "fileURL": "testIcon.png",
  "player": "TEST",
  "scopedId": "TESS",
  "translateFile": "test.translate.json",
  "zone": "Library",
}
`;

exports[`dbRegister should save correct default appearance for Rooms and Features 1`] = `
Object {
  "AssetId": "ASSET#TEST",
  "DataCategory": "Meta::Asset",
  "Story": undefined,
  "defaultExits": Array [],
  "defaultNames": Object {
    "Welcome": Object {
      "name": "Test",
      "tag": "Room",
    },
    "clockTower": Object {
      "name": "TestFeature",
      "tag": "Feature",
    },
  },
  "description": undefined,
  "fileName": "test.wml",
  "importTree": undefined,
  "instance": undefined,
  "name": "Test",
  "namespaceMap": undefined,
  "player": undefined,
  "translateFile": "test.translate.json",
  "zone": "Library",
}
`;

exports[`dbRegister should save correct default appearance for Rooms and Features 2`] = `
Object {
  "extractKey": [Function],
  "items": Array [
    Object {
      "defaultAppearances": Array [
        Object {
          "exits": Array [],
          "name": "Test",
          "render": Array [
            "Test render!",
            Object {
              "tag": "Link",
              "targetTag": "Feature",
              "text": "(clock tower)",
              "to": "clockTower",
            },
          ],
        },
      ],
      "isGlobal": undefined,
      "key": "Welcome",
      "name": undefined,
      "tag": "Room",
    },
    Object {
      "defaultAppearances": Array [
        Object {
          "name": "TestFeature",
          "render": Array [
            "Test feature render",
          ],
        },
      ],
      "isGlobal": undefined,
      "key": "clockTower",
      "name": undefined,
      "tag": "Feature",
    },
  ],
  "mergeFunction": [Function],
  "search": Object {
    "DataCategory": "ASSET#TEST",
  },
  "table": "assets",
}
`;

exports[`dbRegister should save exits in default appearance for Rooms 1`] = `
Object {
  "AssetId": "ASSET#TEST",
  "DataCategory": "Meta::Asset",
  "Story": undefined,
  "defaultExits": Array [
    Object {
      "from": "Entry",
      "name": "welcome",
      "to": "Welcome",
    },
  ],
  "defaultNames": Object {
    "Entry": Object {
      "name": "Entry",
      "tag": "Room",
    },
    "Welcome": Object {
      "name": "Test",
      "tag": "Room",
    },
  },
  "description": undefined,
  "fileName": "test.wml",
  "importTree": undefined,
  "instance": undefined,
  "name": "Test",
  "namespaceMap": undefined,
  "player": undefined,
  "translateFile": "test.translate.json",
  "zone": "Library",
}
`;

exports[`dbRegister should save exits in default appearance for Rooms 2`] = `
Object {
  "extractKey": [Function],
  "items": Array [
    Object {
      "defaultAppearances": Array [
        Object {
          "exits": Array [],
          "name": "Test",
          "render": Array [
            "Test render!",
          ],
        },
      ],
      "isGlobal": undefined,
      "key": "Welcome",
      "name": undefined,
      "tag": "Room",
    },
    Object {
      "defaultAppearances": Array [
        Object {
          "exits": Array [
            Object {
              "name": "welcome",
              "to": "Welcome",
            },
          ],
          "name": "Entry",
          "render": Array [
            "Entry render!",
          ],
        },
      ],
      "isGlobal": undefined,
      "key": "Entry",
      "name": undefined,
      "tag": "Room",
    },
  ],
  "mergeFunction": [Function],
  "search": Object {
    "DataCategory": "ASSET#TEST",
  },
  "table": "assets",
}
`;

exports[`dbRegister should save meta only for instanced Story type 1`] = `
Object {
  "AssetId": "ASSET#TEST",
  "DataCategory": "Meta::Asset",
  "Story": true,
  "defaultExits": Array [],
  "defaultNames": Object {},
  "description": undefined,
  "fileName": "test.wml",
  "importTree": undefined,
  "instance": true,
  "name": "Test",
  "namespaceMap": undefined,
  "player": undefined,
  "translateFile": "test.translate.json",
  "zone": "Library",
}
`;

exports[`dbRegister should save meta only for instanced Story type 2`] = `
Object {
  "extractKey": [Function],
  "items": Array [],
  "mergeFunction": [Function],
  "search": Object {
    "DataCategory": "ASSET#TEST",
  },
  "table": "assets",
}
`;

exports[`dbRegister should save meta, rooms for Asset type 1`] = `
Object {
  "AssetId": "ASSET#TEST",
  "DataCategory": "Meta::Asset",
  "Story": undefined,
  "defaultExits": Array [],
  "defaultNames": Object {
    "Welcome": Object {
      "name": "Welcome",
      "tag": "Room",
    },
  },
  "description": undefined,
  "fileName": "test.wml",
  "importTree": undefined,
  "instance": undefined,
  "name": "Test",
  "namespaceMap": undefined,
  "player": undefined,
  "translateFile": "test.translate.json",
  "zone": "Library",
}
`;

exports[`dbRegister should save meta, rooms for Asset type 2`] = `
Object {
  "extractKey": [Function],
  "items": Array [
    Object {
      "defaultAppearances": Array [
        Object {
          "rooms": Object {
            "Welcome": Object {
              "name": "Welcome",
              "x": 0,
              "y": 100,
            },
          },
        },
      ],
      "key": "Village",
      "tag": "Map",
    },
    Object {
      "defaultAppearances": Array [
        Object {
          "exits": Array [],
          "name": "Welcome",
          "render": Array [],
        },
      ],
      "isGlobal": undefined,
      "key": "Welcome",
      "name": undefined,
      "tag": "Room",
    },
    Object {
      "defaultAppearances": Array [],
      "isGlobal": undefined,
      "key": "clockTower",
      "name": undefined,
      "tag": "Feature",
    },
  ],
  "mergeFunction": [Function],
  "search": Object {
    "DataCategory": "ASSET#TEST",
  },
  "table": "assets",
}
`;

exports[`dbRegister should save meta, rooms for Story type 1`] = `
Object {
  "AssetId": "ASSET#TEST",
  "DataCategory": "Meta::Asset",
  "Story": true,
  "defaultExits": Array [],
  "defaultNames": Object {},
  "description": undefined,
  "fileName": "test.wml",
  "importTree": undefined,
  "instance": undefined,
  "name": "Test",
  "namespaceMap": undefined,
  "player": undefined,
  "translateFile": "test.translate.json",
  "zone": "Library",
}
`;

exports[`dbRegister should save meta, rooms for Story type 2`] = `
Object {
  "extractKey": [Function],
  "items": Array [
    Object {
      "defaultAppearances": Array [],
      "isGlobal": undefined,
      "key": "Welcome",
      "name": undefined,
      "tag": "Room",
    },
  ],
  "mergeFunction": [Function],
  "search": Object {
    "DataCategory": "ASSET#TEST",
  },
  "table": "assets",
}
`;
